--- a/Vacation_Itinerary/Vacation_Itinerary.ipynb
+++ b/Vacation_Itinerary/Vacation_Itinerary.ipynb
@@ -29,11 +29,123 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City_ID</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Current Description</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Hotel Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Bredasdorp</td>\n",
+       "      <td>ZA</td>\n",
+       "      <td>53.24</td>\n",
+       "      <td>clear sky</td>\n",
+       "      <td>-34.5322</td>\n",
+       "      <td>20.0403</td>\n",
+       "      <td>Bredasdorp Country Manor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Asind</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>87.06</td>\n",
+       "      <td>clear sky</td>\n",
+       "      <td>25.7333</td>\n",
+       "      <td>74.3333</td>\n",
+       "      <td>HOTEL JIYA PALACE, ASIND</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Mehtar Lam</td>\n",
+       "      <td>AF</td>\n",
+       "      <td>78.30</td>\n",
+       "      <td>few clouds</td>\n",
+       "      <td>34.6714</td>\n",
+       "      <td>70.2094</td>\n",
+       "      <td>Fareed Hakamani</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Vaini</td>\n",
+       "      <td>TO</td>\n",
+       "      <td>78.96</td>\n",
+       "      <td>few clouds</td>\n",
+       "      <td>-21.2000</td>\n",
+       "      <td>-175.2000</td>\n",
+       "      <td>Keleti Beach Resort</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Souillac</td>\n",
+       "      <td>MU</td>\n",
+       "      <td>73.78</td>\n",
+       "      <td>few clouds</td>\n",
+       "      <td>-20.5167</td>\n",
+       "      <td>57.5167</td>\n",
+       "      <td>Shanti Maurice Resort &amp; Spa</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   City_ID        City Country  Max Temp Current Description      Lat  \\\n",
+       "0        0  Bredasdorp      ZA     53.24           clear sky -34.5322   \n",
+       "1        2       Asind      IN     87.06           clear sky  25.7333   \n",
+       "2        3  Mehtar Lam      AF     78.30          few clouds  34.6714   \n",
+       "3        4       Vaini      TO     78.96          few clouds -21.2000   \n",
+       "4        5    Souillac      MU     73.78          few clouds -20.5167   \n",
+       "\n",
+       "        Lng                   Hotel Name  \n",
+       "0   20.0403     Bredasdorp Country Manor  \n",
+       "1   74.3333     HOTEL JIYA PALACE, ASIND  \n",
+       "2   70.2094              Fareed Hakamani  \n",
+       "3 -175.2000          Keleti Beach Resort  \n",
+       "4   57.5167  Shanti Maurice Resort & Spa  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 1. Read the WeatherPy_vacation.csv into a DataFrame.\n",
-    "# vacation_df = pd.read_csv(\"Vacation_Search/WeatherPy_vacation.csv\")\n",
-    "# vacation_df.head()"
+    "vacation_df = pd.read_csv(\"../Vacation_Search/WeatherPy_vacation.csv\")\n",
+    "vacation_df.head()"
    ]
   },
   {
@@ -44,31 +156,53 @@
    "source": [
     "# 2. Using the template add the city name, the country code, the weather description and maximum temperature for the city.\n",
     "info_box_template = \"\"\"\n",
-    "\n",
+    "<dl>\n",
+    "<dt>City</dt><dd>{City}</dd>\n",
+    "<dt>Country</dt><dd>{Country}</dd>\n",
+    "<dt>Current Description</dt><dd>{Current Description}</dd>\n",
+    "<dt>Max Temp</dt><dd>{Max Temp} °F</dd>\n",
+    "</dl>\n",
     "\"\"\"\n",
     "\n",
     "# 3a. Get the data from each row and add it to the formatting template and store the data in a list.\n",
-    "hotel_info = [info_box_template.format(**row) for index, row in clean_hotel_df.iterrows()]\n",
+    "itinerary_info = [info_box_template.format(**row) for index, row in vacation_df.iterrows()]\n",
     "\n",
     "# 3b. Get the latitude and longitude from each row and store in a new DataFrame.\n",
-    "locations = clean_hotel_df[[\"Lat\", \"Lng\"]]"
+    "locations = vacation_df[[\"Lat\", \"Lng\"]]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9126199c2c6948ac90dc3e2cc3e28f55",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# 4a. Add a marker layer for each city to the map.\n",
-    "\n",
+    "marker_layer = gmaps.marker_layer(locations, info_box_content=itinerary_info)\n",
+    "fig = gmaps.figure()\n",
+    "fig.add_layer(marker_layer)\n",
     "# 4b. Display the figure\n",
-    "\n"
+    "fig"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,79 +210,119 @@
     "# 5. Create DataFrames for each city by filtering the 'vacation_df' using the loc method. \n",
     "# Hint: The starting and ending city should be the same city.\n",
     "\n",
-    "vacation_start = vacation_df.loc[]\n",
-    "vacation_end = vacation_df.loc[]\n",
-    "vacation_stop1 = vacation_df.loc[]\n",
-    "vacation_stop2 = vacation_df.loc[] \n",
-    "vacation_stop3 = vacation_df.loc[] "
+    "vacation_start = vacation_df.loc[vacation_df[\"City\"] == \"Miraflores\"]\n",
+    "vacation_end = vacation_df.loc[vacation_df[\"City\"] == \"Miraflores\"]\n",
+    "vacation_stop1 = vacation_df.loc[vacation_df[\"City\"] == \"Tecoanapa\"]\n",
+    "vacation_stop2 = vacation_df.loc[vacation_df[\"City\"] == \"Puerto Escondido\"]\n",
+    "vacation_stop3 = vacation_df.loc[vacation_df[\"City\"] == \"Seybaplaya\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 6. Get the latitude-longitude pairs as tuples from each city DataFrame using the to_numpy function and list indexing.\n",
-    "start = \n",
-    "end = \n",
-    "stop1 = \n",
-    "stop2 = \n",
-    "stop3 = "
+    "start = vacation_start[\"Lat\"].to_numpy()[0], vacation_start[\"Lng\"].to_numpy()[0]\n",
+    "end = vacation_end[\"Lat\"].to_numpy()[0], vacation_end[\"Lng\"].to_numpy()[0]\n",
+    "stop1 = vacation_stop1[\"Lat\"].to_numpy()[0], vacation_stop1[\"Lng\"].to_numpy()[0]\n",
+    "stop2 = vacation_stop2[\"Lat\"].to_numpy()[0], vacation_stop2[\"Lng\"].to_numpy()[0]\n",
+    "stop3 = vacation_stop3[\"Lat\"].to_numpy()[0], vacation_stop3[\"Lng\"].to_numpy()[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "38ed4e445904484da722a315f2903e78",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# 7. Create a direction layer map using the start and end latitude-longitude pairs,\n",
     "# and stop1, stop2, and stop3 as the waypoints. The travel_mode should be \"DRIVING\", \"BICYCLING\", or \"WALKING\".\n",
-    "\n"
+    "fig = gmaps.figure()\n",
+    "vacation_itinerary = gmaps.directions_layer(\n",
+    "        start, end, waypoints=[stop1, stop2, stop3],\n",
+    "        travel_mode='DRIVING')\n",
+    "fig.add_layer(vacation_itinerary)\n",
+    "fig"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 8. To create a marker layer map between the four cities.\n",
     "#  Combine the four city DataFrames into one DataFrame using the concat() function.\n",
-    "itinerary_df = pd.concat([],ignore_index=True)\n",
-    "itinerary_df"
+    "itinerary_df = pd.concat([vacation_start, vacation_stop1, vacation_stop2, vacation_stop3],ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 9 Using the template add city name, the country code, the weather description and maximum temperature for the city. \n",
     "info_box_template = \"\"\"\n",
-    "\n",
+    "<dl>\n",
+    "<dt>Hotel Name</dt><dd>{Hotel Name}</dd>\n",
+    "<dt>City</dt><dd>{City}</dd>\n",
+    "<dt>Country</dt><dd>{Country}</dd>\n",
+    "<dt>Current Weather</dt><dd>{Current Description} and {Max Temp} °F</dd>\n",
+    "</dl>\n",
     "\"\"\"\n",
-    "\n",
-    "# 10a Get the data from each row and add it to the formatting template and store the data in a list.\n",
+    "# 10a. Get the data from each row and add it to the formatting template and store the data in a list.\n",
     "hotel_info = [info_box_template.format(**row) for index, row in itinerary_df.iterrows()]\n",
-    "\n",
     "# 10b. Get the latitude and longitude from each row and store in a new DataFrame.\n",
     "locations = itinerary_df[[\"Lat\", \"Lng\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b1809fa83dc8456bbfbb21f721cb3336",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# 11a. Add a marker layer for each city to the map.\n",
-    "\n",
-    "# 11b. Display the figure\n"
+    "marker_layer = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
+    "fig = gmaps.figure()\n",
+    "fig.add_layer(marker_layer)\n",
+    "# 11b. Display the figure\n",
+    "fig"
    ]
   },
   {
@@ -175,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.11"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
